# ViVidBot

./: .env  .gitignore  .langchain.db  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.ipynb
Valley/: README.md  requirements.txt
Valley/Crawler/: download_cmd_generation.py  download_jukin_video_id.py  parallel_download_VATEX.py  parallel_download_jukin.py
Valley/valley/: conversation.py  utils.py
Valley/valley/data/: dataset.py  video_transform.py
Valley/valley/inference/: run_valley.py  run_valley_conv.py  run_valley_llamma_v2.py
Valley/valley/model/: apply_delta.py  make_delta.py  valley_model.py
Valley/valley/serve/: cli.py  controller.py  gradio_web_server_video.py  model_worker.py
Valley/valley/train/: sequentialTrainner.py  train.py  train.sh  trainer.py  trainner.py
Valley/valley/util/: config.py  data_util.py  decode_img.py
Valley/wandb/run-20240602_100648-owztz7ha/: run-owztz7ha.wandb
Valley/wandb/run-20240602_101534-xwzcx3fy/: run-xwzcx3fy.wandb
test/: search.json
test/llava/: README.md  llava.ipynb
training/: Vividbot.ipynb  shard_0_new.json  valley_stage1.yaml
vivid_instruct_65k/: 2.generate_youtube_links.ipynb  3.process_youtube_videos.ipynb  all_youtube_search_results.json  generate_answer.ipynb  generate_youtube_links.ipynb  process_youtube_videos.ipynb
vivid_instruct_65k/cache/youtube_search_results/: buôn mê thuột travel.json  bài tập giảm cân.json  bài tập giảm mỡ.json  bài tập thể dục cho người già.json  bài tập thể dục cho nữ.json  bài tập thể dục giảm cân.json  bài tập thể dục giảm mỡ.json  bài tập thể dục tại công viên.json  bài tập thể dục tại nhà.json  bài tập thể dục.json  bài tập thể hình tại nhà.json  bài tập thể hình.json  bài tập tiếng anh lớp 10 có đáp án.json  bài tập tiếng anh lớp 10.json  bài tập tiếng anh lớp 11.json  bài tập tiếng anh lớp 12 có đáp án.json  bài tập tiếng anh lớp 12.json  bài tập tiếng anh lớp 9 có đáp án.json  bài tập tiếng anh lớp 9.json  bài tập tại nhà.json  bài tập yoga cho nam giới.json  bài tập yoga cho người già.json  bài tập yoga cho người mới bắt đầu.json  bài tập yoga cho phụ nữ.json  bài tập yoga.json  bóng chuyền nam hôm nay.json  bóng chuyền nam quốc tế hôm nay.json  bóng chuyền nam quốc tế mới nhất hôm nay.json  bóng chuyền nam quốc tế mới nhất.json  bóng chuyền nam quốc tế u19.json  bóng chuyền nam quốc tế u22.json  bóng chuyền nam quốc tế.json  bóng chuyền nam u22 việt nam.json  bóng chuyền nam việt nam mới nhất hôm nay.json  bóng chuyền nam việt nam u19.json  bóng chuyền nam việt nam.json  bóng chuyền nữ hôm nay.json  bóng chuyền nữ quốc gia hôm nay.json  bóng chuyền nữ quốc tế hôm nay.json  (+1251 more)
vivid_instruct_65k/data/: finetuning_data.json  test.json  test_finetuning_data.json
vivid_instruct_65k/discord/: discord.py
vivid_instruct_65k/processor/: upload_hf.py
vivid_instruct_65k/run/: main.py
vividbot/: requirements.txt
vividbot/data/: README.md  check_hf_json.py  schemas.py  test.ipynb  test.py  test2.ipynb  unzip_upload_hf.py
vividbot/data/builder/: vast2m.py  (+2 more)
vividbot/llamavid/: conversation.py
vividbot/script/: instruct500.sh  instruct500k.sh  vast2m.sh  vast2m_download.sh  videoinstruck100k.sh
vividbot/scripts/: convert_gqa_for_eval.py  convert_mmbench_for_submission.py  convert_seed_for_submission.py  convert_sqa_to_llava.py  convert_sqa_to_llava_base_prompt.py  convert_video_chatgpt_to_llava.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  convert_webvid_to_llava.py
vividbot/valley/: conversation.py  infer.py  utils.py
wandb/: latest-run
wandb/latest-run/: run-ycyhy7at.wandb
wandb/run-20240806_174311-1rgjbipi/: run-1rgjbipi.wandb
wandb/run-20240807_151933-jh1g4ovx/: run-jh1g4ovx.wandb
wandb/run-20240807_152142-g5emsuix/: run-g5emsuix.wandb
wandb/run-20240807_152413-6tmio15c/: run-6tmio15c.wandb
wandb/run-20240807_152651-j7ikxt29/: run-j7ikxt29.wandb
wandb/run-20240807_152956-k0724upw/: run-k0724upw.wandb
wandb/run-20240807_153259-scybm926/: run-scybm926.wandb
wandb/run-20240807_153935-k3q6o2ob/: run-k3q6o2ob.wandb
wandb/run-20240807_154117-n8rfglpa/: run-n8rfglpa.wandb
wandb/run-20240807_154628-euuwkob2/: run-euuwkob2.wandb
wandb/run-20240807_154808-1yg96tgi/: run-1yg96tgi.wandb
wandb/run-20240807_155430-4dvab3ep/: run-4dvab3ep.wandb
wandb/run-20240807_160445-z5cnswz7/: run-z5cnswz7.wandb
wandb/run-20240807_160753-i8k8e2d6/: run-i8k8e2d6.wandb
wandb/run-20240807_161443-1avhrdvu/: run-1avhrdvu.wandb
wandb/run-20240807_161811-jtle5tza/: run-jtle5tza.wandb
wandb/run-20240807_162035-9jyuye82/: run-9jyuye82.wandb
wandb/run-20240807_162343-eeemx03j/: run-eeemx03j.wandb
wandb/run-20240807_162507-tck87vw6/: run-tck87vw6.wandb
wandb/run-20240807_162727-7r4y5f5p/: run-7r4y5f5p.wandb
wandb/run-20240807_162940-2exyu13m/: run-2exyu13m.wandb
wandb/run-20240807_163541-suxiw61n/: run-suxiw61n.wandb
wandb/run-20240807_165144-6cj43o4s/: run-6cj43o4s.wandb
wandb/run-20240807_165455-9r6cb6zq/: run-9r6cb6zq.wandb
wandb/run-20240807_170048-x304inuv/: run-x304inuv.wandb
wandb/run-20240807_170145-ujrlqhmd/: run-ujrlqhmd.wandb
wandb/run-20240807_171202-gqfda01b/: run-gqfda01b.wandb
wandb/run-20240807_175044-8amig5dm/: run-8amig5dm.wandb
(+428 files in other folders)
