[tool.poetry]
name = "vividbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "vividbot" },
]

[tool.poetry.dependencies]
python = "^3.10"
translators = "^5.9.2"
datasets = "^2.20.0"
tqdm = "^4.66.4"
yt-dlp = "^2024.7.9"
google-generativeai = "^0.7.1"
python-dotenv = "^1.0.1"
groq = "^0.9.0"
openai = "^1.35.13"
anthropic = "^0.31.0"
langchain = "^0.2.11"
langchain-groq = "^0.1.6"
langchain-openai = "^0.1.17"
langchain-fireworks = "^0.1.5"
langchain-together = "^0.1.4"
langchain-anthropic = "^0.1.20"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
ipykernel = "^6.29.5"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["Valley/"]
line-length = 88
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"